[gd_scene load_steps=10 format=3 uid="uid://drydgilwxsnn0"]

[ext_resource type="Script" path="res://scripts/traps.gd" id="1_gnkq4"]
[ext_resource type="Texture2D" uid="uid://ddwkldd535a8k" path="res://assets/Traps/Fire/On (16x32).png" id="1_jfvsb"]
[ext_resource type="Texture2D" uid="uid://bm6a7w2e5xsdn" path="res://assets/Traps/Fire/Off.png" id="2_6nm4l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hx1hn"]
size = Vector2(16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwhh"]
atlas = ExtResource("1_jfvsb")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ke20"]
atlas = ExtResource("1_jfvsb")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msddt"]
atlas = ExtResource("1_jfvsb")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hbxfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6nm4l")
}],
"loop": true,
"name": &"fire_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ke20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msddt")
}],
"loop": true,
"name": &"fire_on",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyoc8"]
size = Vector2(20, 10)

[node name="fire_trap" type="Area2D" groups=["traps"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_gnkq4")
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20.5)
shape = SubResource("RectangleShape2D_hx1hn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_hbxfp")
animation = &"fire_on"

[node name="Detection" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2(-110, -5)
shape = SubResource("RectangleShape2D_hyoc8")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
